--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,29 +58,25 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  function playSound(event) {
-    const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`); // use attribute selector
-    const key = document.querySelector(`.key[data-key="${event.keyCode}"`);
-    if (!audio) return; 
-    audio.currentTime = 0; // rewind to the start
+  document.addEventListener('keydown', function(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"`);
+
+    if (!audio) return;
+    audio.currentTime = 0;
     audio.play();
-
-    key.classList.add('playing'); // vanilla js to add class
-
-  };
-
-  function removeTransition(event) {
-    if (event.propertyName !== 'transform') return;
-
-    this.classList.remove('playing');
-  };
-
-  window.addEventListener('keydown', playSound);
+    key.classList.add('playing');
+  });
 
   const keys = document.querySelectorAll('.key');
   keys.forEach(key => {
-    key.addEventListener('transitionend', removeTransition);
+    key.addEventListener('transitionend', function(e) {
+      if (e.propertyName !== 'transform') return;
+
+      this.classList.remove('playing');
+    });
   });
+  
 </script>
 
 
