--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,39 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%; /* by default its 50% */
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    function convertDegrees(current, max) {
+      return current / max * 360;
+    }
+
+    function setDate() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const minutes = now.getMinutes();
+      const hours = now.getHours();
+
+      let secondsDeg = 90 + convertDegrees(seconds, 60);
+      let minutesDeg = 90 + convertDegrees(minutes, 60);
+      let hoursDeg = 90 + convertDegrees(hours, 12);
+
+      secondHand.style.transform = `rotate(${secondsDeg}deg)`;
+      minuteHand.style.transform = `rotate(${minutesDeg}deg)`;
+      hourHand.style.transform = `rotate(${hoursDeg}deg)`;
+    }
+
+    setInterval(setDate, 1000);
 
   </script>
 </body>
